Ensure scroll cue does not overlap footer

--- a/style/preview.less
+++ b/style/preview.less
@@ -244,6 +244,7 @@
 		align-items: center;
 		justify-content: center;
 		height: 40px;
+		z-index: 5;
 
 		&-link {
 			margin-right: 5px;
